go to https://github.com/aanoaa/p5-hubot-scripts/issues for the roadmap and known issues.
# git shortlog --no-merges develop --not <tag>

0.1.9    Mon Jul 21 13:42:23 2014 KST
    - update dzil profile
    - added jira web hook event listner
    - updated readme
    - added <3 script
    - using content-type application/json

0.1.8    Fri Feb 14 01:46:35 2014 KST
    - [bugzilla] speak quicksearch url
    - [githubissue] added
    - perltidy all scripts

0.1.7    Fri Oct 18 05:48:26 2013 KST
    - [sayhttpd] added sayhttpd - ported say_httpd from NodeJS Hubot (thanks @hggh)

0.1.6    Wed Oct 16 14:57:14 2013 KST
    - [rules] Ported 'the rules' from NodeJS Hubot to p5-Hubot (thanks @hggh)

0.1.5    Tue Jul  9 13:22:01 2013 KST
    - [print] add `print` script for easy evaluate perl code and print out

0.1.4    Wed Jun 19 11:26:40 2013 KST
    - [storable] added for saving robot's brain

0.1.3    Sat Jun  8 18:43:42 2013 KST
    - [backup] remove `save` COMMAND; save the robot's brain data automatically
    - [backup] add `hubot: backup` COMMAND for immediately backup

0.1.2    Tue May 14 14:03:15 2013 KST
    - no more whisper
    - [op] added for `MODE $channel +o $nick`
    - required Hubot v0.1.9

0.1.1    Tue Apr  2 17:53:48 2013 KST
    - [dice] roll a dice

0.1.0    Thu Jan  3 04:36:53 2013 KST
    - [bugzilla] display product & component info
    - [uptime] fix uptime return value to expected
    - [tell] robot tell <message> immediately if <user> is around
    - [bugzilla] support (bug|bz) <id> <query> ... - multiple search
    - [bugzilla] update bz usage
    - [tell] check $recipient exist in the $room
    - required Hubot v0.1.3

0.0.14    Thu Nov 22 03:14:04 2012 KST
    - add backup script

0.0.13    Wed Nov 21 19:11:54 2012 KST
    - adjust blacklist help messages
    - add HUBOT_BLACKLIST_MANAGER env for managing blacklist
    - s/warn/print STDERR/; @blacklist.pm
    - don't care about order between `blacklist` and `redisBrain`